Add the / to line 11 and line 12
<body> and <html> tag were not closed properly, thus added the / to the tags.

--- a/HomePage.html
+++ b/HomePage.html
@@ -8,5 +8,5 @@
     </nav>
     <h1>My learning GIT homepage</h1>
     <p>This is the first paragraph written for UECS2363</p>
-   <body>
- <html>
+   </body>
+ </html>
