update the header 1 and added new header

--- a/HomePage.html
+++ b/HomePage.html
@@ -6,7 +6,8 @@
       <a href = '#'> About | </a>
       <a href = '#'> Contact | </a>
     </nav>
-    <h1>My learning GIT homepage</h1>
+    <h1>My learning GIT homepage - updated</h1>
+    <h3>Added another header</h3>
     <p>This is the first paragraph written for UECS2363</p>
    </body>
  </html>
