--- a/HomePage.html
+++ b/HomePage.html
@@ -9,5 +9,6 @@
     <h1>My learning GIT homepage - updated</h1>
     <h3>Added another header</h3>
     <p>This is the first paragraph written for UECS2363</p>
+    <p>This paragraph is under the sponsors branch</p>
    </body>
  </html>
