updated to show conflicts

--- a/HomePage.html
+++ b/HomePage.html
@@ -8,7 +8,7 @@
     </nav>
     <h1>My learning GIT homepage - updated</h1>
     <h3>Added another header</h3>
-    <p>This is the first paragraph written for UECS2363</p>
+    <p>This is the first paragraph written for UECS2363 - update to resolve conflicts</p>
     <p>This paragraph is under the sponsors branch</p>
    </body>
  </html>
