--- a/HomePage.html
+++ b/HomePage.html
@@ -7,6 +7,7 @@
       <a href = '#'> Contact | </a>
     </nav>
     <h1>My learning GIT homepage - updated</h1>
+    <p>Paragraph for main</p>
     <h3>Added another header</h3>
     <p>This is the first paragraph written for UECS2363</p>
    </body>
